--- a/app/views/departments/show.html.erb
+++ b/app/views/departments/show.html.erb
@@ -1,6 +1,6 @@
 <h1><%= @department.name %></h1>
 <hr />
-<%# <p>What would you like to purchase?</p>
+<p>What would you like to purchase?</p>
 <%=link_to 'View Items', department_items_path(@department) %>
 <br />
 <%= link_to 'Edit Department', edit_department_path(@department) %>
