--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,7 +1,9 @@
 <h1>Click an Item To View Content</h1>
 <%= link_to 'Create a new item', new_department_item_path(@department) %>
 <ul>
-  <% @items.each do |item| %>
+<%#order items in alpha order%>
+<%item = @items.order(:name)%>
+  <% item.each do |item| %>
     <li><%= link_to item.name, [@department, item] %></li>
   <% end %>
 </ul>
